--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/cardItem"
-        android:layout_gravity="top"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        card_view:cardCornerRadius="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true">
+<android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/tools"
+    android:id="@+id/cardItem"
+    android:layout_gravity="top"
+    app:cardUseCompatPadding="true"
+    card_view:cardElevation="2sp"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -24,7 +28,7 @@
                 android:gravity="center"
                 android:textStyle="bold"
                 android:textColor="#fffcfc"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:text="@string/questionString"
                 android:layout_alignParentTop="true" />
 
